--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,8 +53,11 @@ dependencies {
 
     implementation 'com.google.dagger:dagger:2.16'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.16'
+    implementation 'com.google.dagger:dagger-android:2.16'
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.16'
 
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.4.0'
 
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
 
