--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,9 @@
                 android:resource="@xml/apod_widget_info" />
         </receiver>
 
-        <activity android:name=".ui.widget.config.ApodWidgetConfigureActivity">
+        <activity
+            android:name=".ui.widget.config.ApodWidgetConfigureActivity"
+            android:theme="@style/Theme.AppCompat.Light.Dialog">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
             </intent-filter>
