UI - displaying image and text in app widget

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,10 @@
                 <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".ui.widget.ApodIntentService"
+            android:exported="false"></service>
     </application>
 
 </manifest>
