Gradle - removing unused kotlin support

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,11 @@
 apply plugin: 'com.android.application'
 
-apply plugin: 'kotlin-android'
-
-apply plugin: 'kotlin-android-extensions'
-
 android {
     signingConfigs {
         testConfig {
             keyAlias 'testKey'
             keyPassword 'testtest'
-            storeFile file('test_keystore.jks')
+            storeFile file("${rootDir}/app/test_keystore.jks")
             storePassword 'testtest'
         }
     }
