--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,10 +51,10 @@ dependencies {
     ext {
         room_version = "1.1.1"
         lifecycle_version = "1.1.1"
-        support_version = "28.0.0-rc02"
+        support_version = "28.0.0"
     }
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.android.support:appcompat-v7:$support_version"
     implementation "com.android.support:customtabs:$support_version"
     implementation "com.android.support:preference-v7:$support_version"
@@ -65,8 +65,8 @@ dependencies {
 
     implementation 'com.firebase:firebase-jobdispatcher:0.8.5'
 
-    implementation 'com.google.android.gms:play-services-analytics:16.0.3'
-    implementation 'com.google.android.gms:play-services-ads:15.0.1'
+    implementation 'com.google.android.gms:play-services-analytics:16.0.4'
+    implementation 'com.google.android.gms:play-services-ads:17.0.0'
 
     implementation "android.arch.lifecycle:extensions:$lifecycle_version"
     implementation "android.arch.persistence.room:runtime:$room_version"
